@@ -8,12 +8,15 @@ Changes in JMurmel-1.3 relative to JMurmel-1.2.2
      (apply '(lambda (a b) (+ a b)) '(1 2))
    no longer works but gives an error.
    Old behaviour can be restored by the commandline flag '--XX-oldlambda' (interpreter only).
+ * changed fixnums from 64 bit to 54 bit (53 bits + 1 sign bit)
 
+ * added the global variables "most-positive-fixnum" and "most-negative-fixnum"
  * added the special operators catch, throw and unwind-protect
  * added functionp
- * added make-array, vector, vector-length, vectorp, simple-vector-p, svref, svset and svlength
  * added simple-string-p
- * added list->simple-vector and simple-vector->list
+ * added vector support:
+   * added make-array, vector, vector-length, vectorp, simple-vector-p, svref, svset and svlength
+   * added list->simple-vector and simple-vector->list
 
  * fixed backquote expansion:
    e.g. `(a ,nil) was eval'd to (a); correct expansion is (a nil)
